[package]
name = "jsoncanvas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[[bin]]
name = "main"
path = "bin/main.rs"

[[bin]]
name = "serial"
path = "bin/serial.rs"
