[package]
name = "jsoncanvas"
version = "0.1.0"
authors = ["Julien Duroure <julien.duroure@gmail.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[[bin]]
name = "serial"
path = "bin/serial.rs"

[[bin]]
name = "testing"
path = "bin/testing.rs"
