[package]
name = "jsoncanvas"
version = "0.1.1"
authors = ["Julien Duroure <julien.duroure@gmail.com>"]
license = "MIT"
edition = "2021"
description = "Library for creating and manipulating jsoncanvas data"
repository = "https://github.com/julienduroure/jsoncanvas"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = "3.7"
url = { version = "2.5.0", features = ["serde"]}
hex_color = { version = "3.0.0", features = ["serde"] }

[[bin]]
name = "serial"
path = "bin/serial.rs"

[[bin]]
name = "testing"
path = "bin/testing.rs"
